app/javascript/packs/goodserviceApp/assets/stylesheets/app.scss
.ui.attached.tabular.menu .item, .ui.fluid.vertical.tabular.menu .item, .ui.fluid.tabular.menu .item{
  background: none;
  color: white;

  &.active {
    background: none;
    background-color: rgba(0,0,0, 0.1);
    color: white;
  }

  &:hover {
    color: gray;
  }
}

.ui.segment.tab {
  background: none;
}

button.ui.segment {
  background-color: rgba(0,0,0, 0.1);
  color: white;

  .ui.header {
    color: white;
  }

  &:hover, &:active, .active, &:focus {
    background-color: rgba(0,0,0, 0.3);
    color: gray;

    .ui.header {
      color: gray;
    }
  }
}

#beta {
  vertical-align: super;
  color: gray;
  font-size: 1rem;
}

.route {
  width: 2em;
  height: 2em;
  font-size: 2em;
  line-height: 2em;
  text-align: center;
  font-weight: bold;
  color: #fff;
  margin: .25em;

  &.medium {
    height: 1.75em;
    width: 1.75em;
    font-size: 1.75em;
    line-height: 1.75em;
  }

  &.small {
    height: 1.5em;
    width: 1.5em;
    font-size: 1em;
    line-height: 1.5em;
    display: inline-block;
  }
}

.line-button{
  .route:first-of-type {
    clear: left;
  }
}

.bullet {
  -webkit-border-radius: 999px;
  -moz-border-radius: 999px;
  border-radius: 999px;
}

.diamond {
  transform:rotate(45deg);
  -ms-transform:rotate(45deg);
  -webkit-transform:rotate(45deg);
}

.diamond-inner {
  transform:rotate(-45deg);
  -ms-transform:rotate(-45deg);
  -webkit-transform:rotate(-45deg);
}

